pushed example questions